Fix build: using integer absolute value function 'abs' when argument is of floating point type <http://webkit.org/b/130286>

Reviewed by Filip Pizlo.

Fixes the following build failure using trunk clang:

    JavaScriptCore/assembler/MacroAssembler.h:992:17: error: using integer absolute value function 'abs' when argument is of floating point type [-Werror,-Wabsolute-value]
            value = abs(value);
                    ^
    JavaScriptCore/assembler/MacroAssembler.h:992:17: note: use function 'fabs' instead
            value = abs(value);
                    ^~~
                    fabs

* assembler/MacroAssembler.h:
(JSC::MacroAssembler::shouldBlindDouble): Switch from abs() to
fabs().

Canonical link: https://commits.webkit.org/148268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165683 268f45cc-cd09-0410-ab3c-d52691b4dbfc